get all User gift pick api
