# server/src/routes/user.router.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const userRouter = express.Router();
-const { register, getAllUsers, getUserWithId, updateUser, deleteUserWithId, createAdmin, updateUserPick } = require("../controllers/user.controller");
+const { register, getAllUsers, getUserWithId, updateUser, deleteUserWithId, createAdmin, updateUserPick, getGiftInvertory } = require("../controllers/user.controller");
 const { authenticateToken } = require("../middlewares/authMiddleWare")
 
 userRouter.post('/users', authenticateToken, register);
@@ -10,5 +10,6 @@ userRouter.put('/users/:id', authenticateToken, updateUser);
 userRouter.delete('/users/:id', authenticateToken, deleteUserWithId);
 userRouter.put('/users/:id/role', authenticateToken, createAdmin);
 userRouter.put('/users/:id/giftPick', authenticateToken, updateUserPick);
+userRouter.get('/allGiftPicks/', authenticateToken, getGiftInvertory);
 
 module.exports = userRouter;
